--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chromatique - Wear Your True Colors!</title>
   </head>
-  <link rel="icon" type="image/png" href="/public/F (1).png" />
+  <link rel="icon" type="image/png" href="/public/f (1).png" />
 
   <body>
     <div id="root"></div>
